Fix overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -161,12 +161,10 @@ button:focus, button:active  {
 
 #sidebar {
   max-height: 800px;
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
   text-align: center;
   background-color: #ffeead;
   border-right: 7px solid #243447;
+  overflow: scroll;
   h1 {
     font-size: 3em;
     margin: 0;
@@ -382,7 +380,9 @@ button:focus, button:active  {
   #sidebar, .dark-mode #sidebar {
     position: sticky;
     top: 0;
-    z-index: 99;   border: 0;
+    z-index: 999;   
+    border: 0;
+    overflow: visible;
   }
   #todos, .dark-mode #todos {
     margin-left: 0.3em;
